--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "scalable-llm"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "modal>=1.2.1",
+    "modal>=1.2.4",
     "pandas>=2.3.3",
-    "torch>=2.9.1",
+    "torch==2.2.2",
     "unsloth>=2024.8",
 ]
