--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=0.33.0",
     "datasets>=4.4.1",
     "modal>=1.2.4",
-    "pandas>=2.3.3",
+    "numpy<2",
+    "peft>=0.7.1",
+    "sentencepiece>=0.2.0",
     "setuptools>=80.9.0",
     "torch==2.2.2",
-    "transformers>=4.57.3",
+    "transformers>=4.43.0",
     "trl>=0.25.1",
-    "typer>=0.20.0",
-    "unsloth>=2024.8",
 ]
