--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=0.33.0",
     "datasets>=4.4.1",
+    "gradio>=6.0.1",
     "modal>=1.2.4",
     "numpy<2",
     "peft>=0.7.1",
